# spade

./: Cargo.toml  Makefile  README.md
.github/workflows/: basic.yaml
examples/: README.md  nginx.conf
examples/content/: a fourth page.md  a third page.md  index.md  some other page.md
examples/theme/: .eslintignore  .eslintrc.js  default.html  package.json  postcss.config.js  tsconfig.json  webpack.config.js
examples/theme/assets/: main.js  styles.css
examples/theme/src/: graph.ts  index.ts  styles.css  tooltips.ts
examples/theme/templates/: 404.html  base.html  default.html  tag.html
src/: content.rs  error.rs  filesystem.rs  frontmatter.rs  links.rs  main.rs  meta.rs  repository.rs  traits.rs
