[package]
name = "spade"
version = "0.1.0"
authors = ["val3rius <erik@valerius.se>"]
edition = "2018"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33.3"
comrak = "0.12.1"
lazy_static = "1.4.0"
notify = "4.0.16"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.21"
serde_json = "1"
slug = "0.1.4"
tera = "1"